--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ html, body{
 
   }#camera--view, #camera--sensor, #camera--output{
       transform: scaleX(-1);
-      //filter: FlipH;
+      //filter: FlipH;//
 
   }#camera--trigger{
       width: 200px;
@@ -31,7 +31,7 @@ html, body{
   }.taken{
       height: 200px!important;
       width: 200px!important;
-      //transition: all 0.5s ease-in;
+      //transition: all 0.5s ease-in;//
       border: solid 3px white;
       box-shadow: 0 5px 10px 0 rgba(0,0,0,0.2);
       top: calc(40% - 100px);
